--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,17 +8,21 @@
 
 
         <TextView
-            android:id="@+id/treningTextView"
+            android:id="@+id/trainingTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
-            android:text="TextView" />
+            android:textSize="30sp"
+            android:gravity="center"
+            android:text="@string/whats_train_today" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
             <ImageButton
                 android:id="@+id/armImageButton"
@@ -26,60 +30,59 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="Arms"
-                tools:src="@tools:sample/avatars" />
+                android:src="@drawable/arms"
+                android:background="@null"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"/>
 
             <ImageButton
                 android:id="@+id/legsImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:contentDescription="Legs"
-                tools:src="@tools:sample/avatars" />
-        </LinearLayout>
+                android:src="@drawable/legs"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-
-            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/bellyImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:contentDescription="Belly"
-                tools:src="@tools:sample/avatars" />
+                android:src="@drawable/belly"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true" />
 
             <ImageButton
                 android:id="@+id/cardioImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:contentDescription="Cardio"
-                tools:src="@tools:sample/avatars" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-
-            android:orientation="horizontal">
+                android:src="@drawable/cardio"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true" />
 
             <ImageButton
                 android:id="@+id/videoImageButton"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:contentDescription="Video"
-                tools:src="@tools:sample/avatars" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:src="@drawable/video"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true" />
         </LinearLayout>
 
 </LinearLayout>
