--- a/app/src/main/res/layout/trening_card_item.xml
+++ b/app/src/main/res/layout/trening_card_item.xml
@@ -6,18 +6,23 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button2"
+        <ImageView
+            android:id="@+id/trainingDifficultLevelImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Button"
+            android:layout_weight="2"
+            android:padding="2dp"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
