New icons for menu. Update login and register validation. update visual view of application. update stage trainings activity.

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,58 +8,50 @@
 
     <EditText
         android:id="@+id/ChangePasswordConfirmNewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
         android:ems="10"
         android:inputType="textPassword"
         android:hint="Confirm new password"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ChangePasswordNewPassword" />
 
     <EditText
         android:id="@+id/ChangePasswordNewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
         android:ems="10"
         android:inputType="textPassword"
         android:hint="New password"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ChangePasswordOldPassword" />
 
     <EditText
         android:id="@+id/ChangePasswordOldPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="Old password"
-        app:layout_constraintBottom_toTopOf="@+id/ChangePasswordButton"
+        android:layout_marginTop="200dp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/ChangePasswordButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:textSize="19sp"
+        android:layout_marginTop="35dp"
         android:text="@string/change_password"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/ChangePasswordConfirmNewPassword" />
 
-    <TextView
-        android:id="@+id/ChangePasswordBackTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/back"
-        android:textSize="20sp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
