--- a/app/src/main/res/layout/activity_choose_trening.xml
+++ b/app/src/main/res/layout/activity_choose_trening.xml
@@ -6,15 +6,10 @@
     android:orientation="vertical"
     tools:context=".ui.home.ChooseTrainingActivity">
 
-    <TextView
-        android:id="@+id/chooseTrainingTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="TextView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/trainingRecyclerView"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
