--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
     tools:context=".login.activities.ui.register.RegisterActivity">
 
     <TextView
@@ -22,8 +21,8 @@
 
     <EditText
         android:id="@+id/EmailEditText"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="@string/prompt_email"
@@ -35,8 +34,8 @@
 
     <EditText
         android:id="@+id/PasswordEditText"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/prompt_password"
@@ -47,8 +46,8 @@
 
     <EditText
         android:id="@+id/nameEditText"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/name"
@@ -62,17 +61,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:textSize="18sp"
         android:text="@string/privacy_policy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
+        android:linksClickable="true"
+        android:textColorLink="#6699FF"/>
 
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginTop="24dp"
+        android:enabled="false"
         android:text="@string/register"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/privacyPolicyCheckbox" />
