--- a/app/src/main/res/layout/activity_token.xml
+++ b/app/src/main/res/layout/activity_token.xml
@@ -17,10 +17,11 @@
 
     <EditText
         android:id="@+id/newPasswordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textPassword"
+        android:layout_marginTop="20dp"
         android:hint="@string/new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,8 +29,8 @@
 
     <EditText
         android:id="@+id/tokenEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
         android:ems="10"
         android:inputType="text"
         android:hint="@string/token"
@@ -41,8 +42,9 @@
     <Button
         android:id="@+id/ResetPasswordButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="@string/change_password"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +52,11 @@
 
     <TextView
         android:id="@+id/tokenTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/enter_password_and_token"
+        android:gravity="center"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/ResetPasswordButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
