--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -28,6 +28,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_marginLeft="5dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -38,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_weight="1"
+                android:textColor="#000000"
                 android:text="TextView"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toTopOf="@+id/kcalTextView" />
