--- a/app/src/main/res/layout/preference_logout_layout.xml
+++ b/app/src/main/res/layout/preference_logout_layout.xml
@@ -14,8 +14,8 @@
             android:id="@android:id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+            android:textColor="#FF0000"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@android:id/summary"
