--- a/app/src/main/res/layout/trening_card_item.xml
+++ b/app/src/main/res/layout/trening_card_item.xml
@@ -2,7 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/trainingCardView">
+    android:id="@+id/trainingCardView"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,8 +15,9 @@
             android:id="@+id/trainingDifficultLevelImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Button"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:padding="2dp"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"/>
@@ -29,18 +32,22 @@
                 android:id="@+id/trainingTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="25sp"
                 android:text="TextView" />
 
             <TextView
                 android:id="@+id/trainingTimeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="25sp"
                 android:text="TextView" />
 
             <TextView
                 android:id="@+id/stageSizeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="25sp"
                 android:text="TextView" />
 
 
