--- a/app/src/main/res/layout/activity_stages.xml
+++ b/app/src/main/res/layout/activity_stages.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:textSize="35sp"
         android:text="TextView"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +30,10 @@
 
     <Button
         android:id="@+id/stagesNextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
         android:text="@string/next"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
